11/04/2013:
	- Several fixes to Kakadu.cc. To force resolution levels to be floor(x/2) rather than the default
	  ceil(x/2) to match how TIFF resolutions are created. Also modification to force 16 bit
	  JPEG2000 to unsigned output. And also fix to strip alpha channels from images.


14/03/2013:
	- Fix to gamma conversion - thanks Chiara Marmo
	- Update to greyscale conversion code


09/03/2013:
	- Updated copyright message in header to new Free Software Foundation address.


08/03/2013:
	- Added greyscale conversion support via new filter_greyscale transform function.


23/02/2013:
	- Gamma correction fixed, minmax commands added, colormap commands added (Chiara Marmo)


30/01/2013:
	- Fix to prevent crashing on malformed JPEG2000 files.


11/12/2012:
	- Changed FLOAT enum type to FLOATINGPOINT to avoid VC++ compiler error.
	- Implemented 16 and 32bit versions of interpolation functions.


10/12/2012:
	- Cleanup to 32 bit code
	- New command to set dynamically the min and max for 32 bit float
	- Addition of rotation function for 90,180,270 degree rotations
	- Fixes to autoconf


30/10/2012:
	- Autoconf cleanup. Removed unneccesary autoconf files: should now use
	  autogen.sh script first before ./configure


18/10/2012:
	- Fix to imageCache delete in FIF.cc - thanks to Michal Becak.


16/10/2012:
	- Added support for TIFF 32 bit integer and float.
	- Fixed 16 bit JPEG2000 support.
	- Added 1 bit support for TIFF.
	- Added gamma support via GAM command.
	- Thanks to Chiara Marmo for initial implementation.


09/09/2012:
	- TIFF metadata fixes.


25/08/2012:
	- Windows compilation fixes by Michal Becak.


13/08/2012:
	- Detect JPEG YCbCr encoding in TIFF and request conversion to RGB
	  by libtiff. Tile _TIFFmalloc() now only occurs in getTile().


16/07/2012:
	- Added check to KakaduImage.cc to handle bilevel images.
	- Clean up to use only floats and floorf() in Transforms.cc.


14/05/2012:
	- Added bilinear interpolation option for CVT resizing. Added